HOTFIX: fixed light unreadable text on topbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,6 +17,11 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+:root {
+  color: #213547;
+  background-color: #ffffff;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
